--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,24 @@
 ---
-# tasks file for RHEL5-STIG
+- include: prelim.yml
+  tags:
+    - prelim_tasks
+    - test
+
+- include: cat1.yml
+  when: rhel5stig_cat1
+
+- include: cat2.yml
+  when: rhel5stig_cat2
+
+- include: cat3.yml
+  when: rhel5stig_cat3
+
+- include: post.yml
+  tags:
+    - post_tasks
+    - test
+
+- include: not_automated.yml
+  tags:
+    - not_auto_fixed
+
