--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,190 @@
 ---
-# defaults file for RHEL5-STIG
+# Generate an audit report
+make_audit_report: False
+
+# Enable or disable remediation for each category
+rhel5stig_cat1: True
+rhel5stig_cat2: False
+rhel5stig_cat3: False
+
+# Changing system defaults
+rhel5stig_snmp_community: B0re4lis
+rhel5stig_pass_min_length: 14
+rhel5stig_pass_min_days: 1
+rhel5stig_pass_max_days: 60
+rhel5stig_pam_unix_params: sha512 shadow try_first_pass use_authtok remember=24
+rhel5stig_pam_auth_sufficient: pam_unix.so try_first_pass
+rhel5stig_pam_cracklib_params: try_first_pass retry=3 maxrepeat=3 minlen=14 dcredit=-1 ucredit=-1 ocredit=-1 lcredit=-1 difok=4
+rhel5stig_pam_faillock_params:
+  - 'auth        [default=die] pam_faillock.so authfail deny=3 unlock_time=604800 fail_interval=900'
+  - 'auth        required      pam_faillock.so authsucc deny=3 unlock_time=604800 fail_interval=900'
+  - 'auth        required      pam_faillock.so preauth silent deny=3 unlock_time=604800 fail_interval=900'
+
+# SELinux settings
+rhel5stig_selinux_pol: targeted
+
+# Network Settings
+# WARNING!
+# Setting this to False will cause the playbook to execute tasks
+# that disable DHCP in /etc/sysconfig/network-scripts/ifcfg-eth*
+# and may leave your system in an unusable state after a reboot.
+rhel5stig_use_dhcp: True
+
+# Set this to False to have the role pause
+rhel5stig_fullauto: True
+
+# Set to True to install all patches and updates available via yum
+rhel5stig_update_packages: True
+
+# Set maximum number of simultaneous system logins (V-38684)
+rhel5stig_maxlogins: 10
+
+# Email address for root mail
+rhel5stig_root_email_address: foo@baz.com
+
+# Set to 'True' if X Windows is needed in your environment
+rhel5stig_xwindows_required: False
+
+# Assume ipv6 is disabled on the target system.
+# This will be changed to 'True' via set_fact in main.yml
+rhel5stig_ipv6_in_use: False
+
+# Whether or not TFTP is required
+# This will prevent the removal of tftp and tftp-server packages
+# and configure tftp to run securely
+rhel5stig_tftp_required: False
+
+# Set to True if system is acting as a router
+# This will disable changing net.ipv4 settings as well as
+# allow the kernel to forward packets
+rhel5stig_system_is_router: False
+
+# Set to True if system is an authorized mail relay
+# This will disable the postfix settings V-38622
+rhel5stig_is_mail_relay: False
+
+# Force the grub password to be updated
+# If a password entry is found in grub.conf, the password will not be changed
+# unless this variable is set to 'True'
+rhel5stig_change_grub_password: False
+
+# The new grub password to insert if  rhel5stig_change_grub_password is TRUE
+# This should be a pre-encrypted string created with
+# grub-crypt --sha-512
+# a completely random 40 character password has been generated for you
+# ONLY USE IF YOU DON'T EVER WANT TO ACCESS THE BOOTLOADER
+# i.e. If this system is running in AWS
+rhel5stig_bootloader_password: $6$t8wbzLbzO0qLbSP8$imtV5DYW43wF4sLhTV.xrwY4.OZnT17ZQSzN.p6P.4bTRTdW0/P9CnpdaHSgVGliP7tvzf3bLWkaTKbhRwOOo0
+
+# NTP configuration used in ntp.conf
+# These should be set to DoD authoritative time source
+rhel5stig_ntp_config_servers:
+  - 0.centos.pool.ntp.org
+  - 1.centos.pool.ntp.org
+  - 2.centos.pool.ntp.org
+  - 3.centos.pool.ntp.org
+
+rhel5stig_ntp_config_restrict:
+  - "-4 default kod nomodify notrap nopeer noquery"
+  - "-6 default kod nomodify notrap nopeer noquery"
+  - "127.0.0.1"
+  - "-6 ::1"
+
+# Services listed in CAT III findings and their configuration
+# state should be started or stopped
+# enabled can be yes or no
+rhel5stig_cat3_services:
+  - name: abrtd
+    state: stopped
+    enabled: no
+
+  - name: atd
+    state: stopped
+    enabled: no
+
+  - name: qpidd
+    state: stopped
+    enabled: no
+
+  - name: oddjobd
+    state: stopped
+    enabled: no
+
+  - name: ntpdate
+    state: stopped
+    enabled: no
+
+  - name: rdisc
+    state: stopped
+    enabled: no
+
+  - name: autofs
+    state: stopped
+    enabled: no
+
+  - name: postfix
+    state: started
+    enabled: yes
+
+  - name: netconsole
+    state: stopped
+    enabled: no
+
+  - name: rhnsd
+    state: stopped
+    enabled: no
+
+  - name: ipsec
+    state: stopped
+    enabled: no
+
+
+# List of temporary accounts and their expiration dates
+# Format of expiration date is YYYY-MM-DD
+#
+# rhel5stig_temporary_users:
+  # - user: foo
+  #   expiration: "2021-09-24"
+
+# Auditd.conf settings
+rhel5stig_auditd_config:
+  # V-38464 - compliant options SYSLOG|EXEC|SINGLE|HALT
+  disk_error_action: SYSLOG
+  # V-38468 - compliant options SYSLOG|EXEC|SINGLE|HALT
+  disk_full_action: SYSLOG
+  # V-38470 - compliant options EMAIL|SYSLOG
+  space_left_action: EMAIL
+  # V-38633 - compliant options 6 or higher (MB)
+  max_log_file: 6
+  # V-38634 - compliant options ROTATE
+  max_log_file_action: ROTATE
+  # V-38636 - compliant options 5 or higher
+  num_logs: 5
+  # V-38678 - must be set to locally defined value - default 75 MB
+  space_left: 75
+  # V-38680 - compliant options - admin account to email
+  action_mail_acct: root
+  # V-54381 - compliant options SINGLE|SUSPEND|HALT|EXEC|SYSLOG
+  # Guidance says that anything but SINGLE results in finding
+  # then says SUSPEND or HALT are acceptable and that
+  # system where availability need is high will need to set this to
+  # something else entirely.
+  # NOTE: SINGLE user mode setting will break cloud systems.
+  admin_space_left_action: HALT
+  # auditd_failure_flag
+  # 2    Tells your system to perform an immediate shutdown without
+  #      flushing any pending data to disk when the limits of your
+  #      audit system are exceeded. Because this shutdown is not a clean shutdown.
+  #      restrict the use of -f 2 to only the most security conscious environments
+  # 1    System continues to run, issues a warning and audit stops.
+  #      Use this for any other setup to avoid loss of data or data corruption.
+  auditd_failure_flag: 2
+
+# AIDE settings
+rhel5stig_aide_cron:
+  aide_job: '/usr/sbin/aide --check'
+  aide_minute: 04
+  aide_hour: 05
+  aide_day: '*'
+  aide_month: '*'
+  aide_weekday: '*'
